os/src/include/batch.h

/* Text to put at the beginning of the generated file. Probably a license. */

#ifndef mozilla_wr_bindings_h
#define mozilla_wr_bindings_h

#pragma once

/* Generated with cbindgen:0.26.0 */

/* Warning, this file is autogenerated by cbindgen. Don't modify this manually. */

#include <stdio.h>
#include <string.h>
#include <stdarg.h>
#include <stddef.h>
#include <stdlib.h>


#define APP_BASE_ADDRESS 2151677952

#define APP_SIZE_LIMIT 131072

#define KERNEL_STACK_SIZE (4096 * 2)

#define MAX_APP_NUM 16

#define USER_STACK_SIZE (4096 * 2)

typedef struct AppManager AppManager;

typedef struct KernelStack KernelStack;

typedef struct UserStack UserStack;

extern struct AppManager APP_MAN;

extern const struct KernelStack KERNEL_STACK;

extern const struct UserStack USER_STACK;

 size_t get_kl_sp(const struct KernelStack * self) ;

 size_t get_us_sp(const struct UserStack * self) ;

 void init_app_man(void) ;

 struct AppManager new(void) ;

extern int printf(const char *fmt,...);

extern int putchar(int c);

extern int puts(const char *s);

extern int sprintf(char *buf, const char *fmt,...);

extern int vsprintf(char *buf, const char *fmt, va_list args);

#endif /* mozilla_wr_bindings_h */

/* Text to put at the end of the generated file */